# tufte_plots

./: .gitignore  README.md  pyproject.toml  split_adapters.py
examples/: README.md  comprehensive_demo.py
tests/: test_color_utils.py  test_colors.py  test_edge_cases.py  test_integration.py  test_label_positioner.py  test_properties.py  test_stress.py  test_theme_manager.py  test_validators.py
tufteplots/: __init__.py  api.py  color_utils.py  label_positioner.py  theme.py  validators.py
tufteplots/adapters/: __init__.py  base.py  grid.py  matplotlib_adapter.py  plotly_adapter.py  seaborn_adapter.py
